--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@hookform/resolvers": "^2.9.10",
+    "@types/react-icons": "^3.0.0",
     "immer": "^9.0.16",
     "phosphor-react": "^1.4.1",
     "polished": "^4.2.2",
