--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@hookform/resolvers": "^2.9.10",
     "@types/react-icons": "^3.0.0",
+    "axios": "^1.4.0",
     "immer": "^9.0.16",
     "phosphor-react": "^1.4.1",
     "polished": "^4.2.2",
@@ -19,6 +20,7 @@
     "react-hook-form": "^7.38.0",
     "react-router-dom": "^6.3.0",
     "styled-components": "^5.3.5",
+    "tailwind-merge": "^1.13.2",
     "zod": "^3.19.1"
   },
   "devDependencies": {
@@ -27,7 +29,10 @@
     "@types/react-dom": "^18.0.6",
     "@types/styled-components": "^5.1.25",
     "@vitejs/plugin-react": "^2.0.0",
+    "autoprefixer": "^10.4.14",
     "eslint": "^8.21.0",
+    "postcss": "^8.4.25",
+    "tailwindcss": "^3.3.2",
     "typescript": "^4.6.4",
     "vite": "^3.0.0"
   }
