--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.38.0",
     "react-router-dom": "^6.3.0",
+    "slick": "^1.12.2",
     "styled-components": "^5.3.5",
     "tailwind-merge": "^1.13.2",
     "zod": "^3.19.1"
