[update] product card, product preview, product detail

--- a/package.json
+++ b/package.json
@@ -13,9 +13,11 @@
         "lint:fix": "eslint --fix ."
     },
     "dependencies": {
+        "@headlessui/react": "^1.7.15",
         "@hookform/resolvers": "^2.9.10",
         "@types/react-icons": "^3.0.0",
         "axios": "^1.4.0",
+        "headlessui": "^0.0.0",
         "immer": "^9.0.16",
         "phosphor-react": "^1.4.1",
         "polished": "^4.2.2",
