call API through prefix

--- a/package.json
+++ b/package.json
@@ -15,8 +15,10 @@
     "dependencies": {
         "@headlessui/react": "^1.7.15",
         "@hookform/resolvers": "^2.9.10",
+        "@types/node": "^20.4.2",
         "@types/react-icons": "^3.0.0",
         "axios": "^1.4.0",
+        "dotenv": "^16.3.1",
         "headlessui": "^0.0.0",
         "immer": "^9.0.16",
         "phosphor-react": "^1.4.1",
