--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-    "name": "coffe-delivery",
+    "name": "morningbasket",
     "private": true,
     "version": "0.0.0",
     "type": "module",
